# chip8-emulator

./: Cargo.toml  flake.nix
shaders/: canvas.frag  canvas.vert
src/: app.rs  constants.rs  instruction_parser.rs  lib.rs  main.rs  virtual_computer.rs
src/renderer/: gl_canvas.rs  mod.rs
