[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chip8"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
sdl2 = "0.35.2"
bitmatch = "0.1.1"
rand = "0.8.5"
clap = { version = "4.3.19", features = ["derive"] }

[dev-dependencies]
rstest = "0.18.1"
pretty_assertions = "1.4.0"

